# CV02

./: CMakeLists.txt
CMake/: FindLibUSB.cmake
Source/: 7Segment.h  Camera.cpp  Camera.h  FrameProcessor.cpp  FrameProcessor.h  New.cpp  New.h  VideoProcessor.cpp  VideoProcessor.h  catchdisplay.cpp  cv_basic.h  main.cpp
Source/Devices/: CH341.cpp
Source/HAL/: Base.h  SerialBus.h  USB.cpp  USB.h
Source/Math/: Vector.h
